--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -90,7 +90,7 @@
                   </div>
               </div>
 
-                     <li>User: {{ user.get_username }}</li>
+                     <li style="color: black;">User: {{ user.get_username }}</li>
                      <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                   {% else %}
                      <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
