--- a/catalog/templates/catalog/roomkey-all-borrowed.html
+++ b/catalog/templates/catalog/roomkey-all-borrowed.html
@@ -8,7 +8,7 @@
 
       {% for keyinst in keyinstance_list %} 
       <li class="{% if keyinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'roomkey-detail' keyinst.roomkey.pk %}">{{keyinst.roomkey}}</a> ({{ keyinst.due_back }}) {% if user.is_staff %}- {{ keyinst.borrower }}{% endif %} {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew_key_user' keyinst.id %}">Renew</a>  {% endif %}
+        <a href="{% url 'roomkey-detail' keyinst.roomkey.pk %}">{{keyinst.roomkey}}</a> ({{ keyinst.due_back }}) {% if user.is_staff %}- {{ keyinst.borrower }}{% endif %} {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew-key-user' keyinst.id %}">Renew</a>  {% endif %}
       </li>
       {% endfor %}
     </ul>
