--- a/catalog/templates/catalog/roomkey_list_borrowed_user.html
+++ b/catalog/templates/catalog/roomkey_list_borrowed_user.html
@@ -8,7 +8,7 @@
 	<ul>
 		{% for roomkey in keyinstance_list %}
 			<li>
-				<a href="{% url 'roomkey-detail' roomkey.roomkey.pk %}">{{ roomkey.roomkey }}</a> ({{ roomkey.due_back }}) - {{ roomkey.id }}
+				<a href="{% url 'roomkey-detail' roomkey.roomkey.pk %}">{{ roomkey.roomkey }}</a> ({{ roomkey.due_back }}) --- ID: {{ roomkey.id }}
 			</li>
 		{% endfor %}
 	</ul>
