--- a/catalog/templates/catalog/roomkey_detail.html
+++ b/catalog/templates/catalog/roomkey_detail.html
@@ -3,12 +3,17 @@
 {% block content %}
   <h1>{{ roomkey.room_name }}</h1>
 
-  <p><strong>Description:</strong> {{ roomkey.room_des }}</p>
-  <p><strong>Number of Keys:</strong> {{ roomkey.keyinstance_set.all.count }}</p> 
+  <p><strong>Description :{{ roomkey.room_des }}</strong> </p>
+  <p><strong>Number of Keys In Total:{{ roomkey.keyinstance_set.all.count }}</strong></p>
+  <p><strong>Number of Keys Available:{{ roomkey.available_keys_count }}</strong> </p>
   
   <div style="margin-left:20px;margin-top:20px">
     
-    <button type='button' class='btn-lg'><a href="{% url 'roomkey-request' roomkey.pk %}">Request</a></button>
+    <button type='button' class='btn-lg'>
+        {% if roomkey.available_keys_count > 0 %}
+        <a href="{% url 'roomkey-request' roomkey.pk %}">Request</a>
+        {% endif %}
+    </button>
 
 
     <h4>Copies</h4>
@@ -24,7 +29,7 @@
           <th>Borrower</th>
           <th>Status</th>
           <th>Date Out</th>
-          <th>Date In</th>
+          <th>Due Back</th>
           <th>Key ID</th>
         </tr>
       </thead>
