--- a/catalog/templates/catalog/roomkey-all-available.html
+++ b/catalog/templates/catalog/roomkey-all-available.html
@@ -1,20 +1,20 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>All Borrowed Keys</h1>
+    <h1>All Available Keys</h1>
 
     {% if keyinstance_list %}
     <ul>
 
       {% for keyinst in keyinstance_list %} 
       <li class="{% if keyinst.is_overdue %}text-danger{% endif %}">
-        {{keyinst.roomkey}} ({{ keyinst.due_back }}) {% if user.is_staff %}- {{ keyinst.borrower }}{% endif %} {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew-key-user' keyinst.id %}">Renew</a>  {% endif %}
+        <a href="{% url 'roomkey-detail' keyinst.roomkey.pk %}">{{keyinst.roomkey}}</a>  {% if perms.catalog.can_mark_returned %}- <a href="{% url 'loan-key-user' keyinst.id %}">Mark Loaned</a>  {% endif %}
       </li>
       {% endfor %}
     </ul>
 
     {% else %}
-      <p>There are no keys borrowed.</p>
+      <p>There are no keys available.</p>
     {% endif %}  
          
 {% endblock %}
