--- a/catalog/templates/catalog/keyinstance_request_update.html
+++ b/catalog/templates/catalog/keyinstance_request_update.html
@@ -1,18 +1,23 @@
 {% extends "base_generic.html" %}
 {% block content %}
+<div class="wrapper">
 
-    <h1>Ruquest Keys For Room: {{keyinst.roomkey}}</h1>
+    <div class="centered"> <h1>Request Keys For Room: {{keyinst.roomkey}}</h1></div>
 
-    <p{% if keyinst.is_overdue %} class="text-danger"{% endif %}>Due date: {{keyinst.due_back}}</p>
 
-    <form action="" method="post">
+
+
+    <form action="" method="post" >
+
         {% csrf_token %}
-        <table>
+        <table style="display: inline-flex">
         {{ form }}
         </table>
         <p><input required id="checkBox" type="checkbox" onclick="validate()"> I accept the <a href="{% url 'key-agreement'%}">terms and conditions</a></p>
         <p id="text" style="display:none">You Have Agreed To the Terms and Conditions</p>
         <input type="submit" value="Submit" />
     </form>
+
+</div>
 
 {% endblock %}
