--- a/catalog/templates/catalog/roomkey_list.html
+++ b/catalog/templates/catalog/roomkey_list.html
@@ -1,14 +1,31 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <div class="content-title">
+    <div class="content-title" xmlns="http://www.w3.org/1999/html">
       <h1>Key List</h1>
   </div>
    
   <div class="split" style="width: 600px">
-    <div class = 'centered'>
-        <h3>INTSRUCTINOS ON HOW TO CHECK OUT A KEY</h3>
-    </div>
+    <br class = 'centered'>
+
+        <h3>INTSRUCTINOS ON HOW TO CHECK OUT A KEY</h3></br>
+
+        <p>
+            You can see how many keys are available for each room on the right side of this </br>
+            page. If you would like to make a key request, click on any of the blocks </br>
+            and you will see a request button if there are keys available to request. </br>
+            Press the request button and fill in the relative information. You will </br>
+            be notified by email once your request has been approved or denied.
+            </br>
+            </br>
+            Alternatively you may also navigate to the <b>All Available Keys</b> catalog </br>
+            in the menu section on the left. There you will see a list of keys that are </br>
+            currently available. Click the request button on the right to request for </br>
+            a key.
+
+
+        </p>
+
    </div>
 
     <div class="split">
