--- a/catalog/templates/catalog/roomkey_requests_all.html
+++ b/catalog/templates/catalog/roomkey_requests_all.html
@@ -40,7 +40,7 @@
 
     
     {% else %}
-      <p>There are key requests.</p>
+      <p>There are no key requests.</p>
     {% endif %} 
   </div>
 
