--- a/catalog/templates/catalog/maintenance-home.html
+++ b/catalog/templates/catalog/maintenance-home.html
@@ -17,7 +17,7 @@
 			<div class="mainpanelcontent bgreen">
 				<a href="{% url 'completed-maintenance' %}" class="maintenance-link">
 					<h4>Complete</h4>
-					<p class="maintenance-under" style="white-space: nowrap;">See completed maintenance requests</p>
+					<p class="maintenance-under" style="white-space: nowrap;">See completed requests</p>
 				</a>
 			</div>
 		</div>
@@ -25,7 +25,7 @@
 			<div class="mainpanelcontent bblue">
 				<a href="{% url 'wip-maintenance' %}" class="maintenance-link">		
 					<h4>Pending</h4>
-					<p class="maintenance-under">See pending maintenance requests</p>
+					<p class="maintenance-under">See pending requests</p>
 				</a>
 			</div>		
 		</div>
@@ -33,7 +33,7 @@
 			<div class="mainpanelcontent bred">
 				<a href="{% url 'maintenance_create' %}" class="maintenance-link">		
 					<h4>Create</h4>
-					<p class="maintenance-under">Submit a new maintenance request</p>
+					<p class="maintenance-under">Submit a new request</p>
 				</a>
 			</div>		
 		</div>
@@ -59,7 +59,7 @@
 		<div class="col-lg-8">
 			<div class="mainpanelcontent bblue">
 				<h3>Placeholder for either: </h3>
-				<h3 style="color: rgba(0, 0, 0, 0.4);">1. Request per Month bar graph</h3>
+				<h3 style="color: rgba(0, 0, 0, 0.5);">1. Request per Month bar graph</h3>
 				<br>
 				<h3 style="color: rgba(0, 0, 0, 0.4);">2. Complete vs Pending status bar</h3>
 				
