--- a/catalog/templates/catalog/roomkey_list.html
+++ b/catalog/templates/catalog/roomkey_list.html
@@ -8,7 +8,7 @@
   <div class="split" style="width: 600px">
     <br class = 'centered'>
 
-        <h3>INTSRUCTINOS ON HOW TO CHECK OUT A KEY</h3></br>
+        <h3>INSTRUCTIONS ON HOW TO CHECK OUT A KEY</h3></br>
 
         <p>
             You can see how many keys are available for each room on the right side of this </br>
