--- a/catalog/templates/catalog/keyinstance_all.html
+++ b/catalog/templates/catalog/keyinstance_all.html
@@ -23,7 +23,7 @@
 
 
       <tr>
-         <td>{{ key.roomkey }}</td>
+         <td><b>{{ key.roomkey }}</b></td>
          <td>{{ key.get_status_display }}</td>
          <td>{{ key.borrower }}</td>
          <td>{{ key.date_out }}</td>
