--- a/catalog/templates/catalog/keyinstance_request_update.html
+++ b/catalog/templates/catalog/keyinstance_request_update.html
@@ -14,6 +14,9 @@
         <table style="display: inline-flex">
         {{ form}}
         </table>
+        <p>
+            (Please use their login name i.e. <b>jlee</b> or <b>bwashington</b>)
+        </p>
         <p><input required id="checkBox" type="checkbox" onclick="validate()"> I accept the <a href="{% url 'key-agreement'%}">terms and conditions</a></p>
         <p id="text" style="display:none">You Have Agreed To the Terms and Conditions</p>
         <input type="submit" value="Submit" />
