--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -20,7 +20,7 @@
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-<link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/512299284989894656/CY0iLUlk_400x400.jpeg">
+<link rel="icon" type="image/png" href="http://www.walterfedy.com/GetSiteFile/favicon.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
@@ -41,16 +41,16 @@
         <div class="collapse navbar-collapse" id="bs-nav-demo">
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-              <li class="navbar-align">User: <b>{{ user.get_username }}</b></li>
-{#              <li> #}
-{#                <span class="dropdown">#}
-{#                  <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">My Borrowed#}
-{#                  <span class="caret"></span></button>#}
-{#                  <ul class="dropdown-menu">#}
-{#                    <li><a href="{% url 'borrowed-keys' %}">My Keys</a></li>#}
-{#                  </ul>#}
-{#                </span>#}
-{#              </li>   #}
+              <li class="navbar-align">User: <b>{{ user.first_name }}</b></li>
+              <li>
+                <span class="dropdown">
+                  <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">My Borrowed
+                  <span class="caret"></span></button>
+                  <ul class="dropdown-menu">
+                    <li><a href="{% url 'borrowed-keys' %}">My Keys</a></li>
+                  </ul>
+                </span>
+              </li>
               <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
             {% else %}
               <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
@@ -77,7 +77,6 @@
                       <li class="sidebar-spacing"><a href="{% url 'keys' %}" class="sidebar-link">Key Status</a></li>
                       <li class="sidebar-spacing"><a href="{% url 'maintenance-home' %}" class="sidebar-link">Maintenance</a></li>
                       <li class="sidebar-spacing"><a href="{% url 'move-home' %}" class="sidebar-link">Move Requests</a></li>
-                      <li class="sidebar-spacing"><a href="{% url 'under_construction' %}" class="sidebar-link">Construction</a></li>
                       <li class="sidebar-bottom"><a href="{% url 'all-available-keys' %}" class="sidebar-link">All Available Keys</a></li>
 
                         {% if user.is_staff %}
@@ -92,7 +91,7 @@
                   </div>
               </div>
 
-                     <li style="color: black;">User: <b>{{ user.get_username }}</b></li>
+                     <li style="color: black;">User: <b>{{ user.first_name }}</b></li>
                      <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                   {% else %}
                      <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
