--- a/catalog/templates/catalog/roomkey_agreement.html
+++ b/catalog/templates/catalog/roomkey_agreement.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h3>Key Holder's Agreement</h3>
 
-<p>I  <b>{{ user.get_username }}</b> acknowledge receipt of the keys designated above and agree to the following terms.</p>
+<p>I  <b>{{ user.first_name }}</b> acknowledge receipt of the keys designated above and agree to the following terms.</p>
 
-<p>1. The key described herein remains the property of WalterFedy/AEC Developments</p>
+<p>1. The key described here remains the property of WalterFedy/AEC Developments</p>
  
 <p>2. The key is entrusted to me for my exclusive use. I will not duplicate, loan, transfer, exchange, misuse, modify, alter, or otherwise allow its use or possession by any other person</p>
  
@@ -15,7 +15,7 @@
  
 <p>5. Upon employment termination or request from team leader, I will return the key promptly, in person, and only to operations</p>
 
-<p>Signed by: <b>{{ user.get_username }}</b>
+<p>Signed by: <b>{{ user.first_name }}</b>
 
 <p>Date: {% now "jS F Y H:i" %}</p>
 
