--- a/catalog/templates/catalog/maintenancerequest_update.html
+++ b/catalog/templates/catalog/maintenancerequest_update.html
@@ -8,8 +8,8 @@
 
 	<div class="row" >
 		<div class="maintenance-title">
-			<h1 class="mainrow">CREATE</h1>
-			<h4 class="maintenance-under">View and submit all maintenance requests here</h4>
+			<h1 class="mainrow">UPDATE</h1>
+			<h4 class="maintenance-under">Update maintenance request</h4>
 		</div>
 	</div>
 </div>
@@ -20,7 +20,7 @@
 				<form action="" method="post">
 				    {% csrf_token %}
 				    <table>
-				    {{ form.as_table }}
+				    {{ form }}
 				    </table>
 				    <input type="submit" value="Submit" />
 				</form>
