--- a/catalog/templates/catalog/email_template.html
+++ b/catalog/templates/catalog/email_template.html
@@ -70,13 +70,6 @@
         line-height: inherit !important;
         text-decoration: none !important;
       }
-      .btn-primary table td:hover {
-        background-color: #34495e !important;
-      }
-      .btn-primary a:hover {
-        background-color: #34495e !important;
-        border-color: #34495e !important;
-      }
     }
     </style>
   </head>
@@ -127,10 +120,16 @@
             <div class="footer" style="clear: both; Margin-top: 10px; text-align: center; width: 100%;">
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
+                  <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
+                    Click <a href="https://www.google.com" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">here</a> to go to portal.
+                  </td>
+                </tr>
+                <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
                     <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">WalterFedy, 675 Queen St S #111, Kitchener, ON N2M 1A1</span>
                   </td>
                 </tr>
+
               </table>
             </div>
             <!-- END FOOTER -->
