--- a/catalog/templates/catalog/maintenancerequest_detail.html
+++ b/catalog/templates/catalog/maintenancerequest_detail.html
@@ -6,9 +6,9 @@
 	
 
 	<div class="row" >
-		<div class="maintenance-title" ">
+		<div class="maintenance-title">
 			<h1 class="mainrow">MAINTENANCE</h1>
-			<h4 class="maintenance-under2">View and submit all maintenance requests here</h4>
+			<h4 class="maintenance-under2">Details about </h4>
 		</div>
 	</div>
 
