--- a/catalog/templates/catalog/maintenancerequest_form.html
+++ b/catalog/templates/catalog/maintenancerequest_form.html
@@ -36,7 +36,7 @@ th, td {
                                 <select name = 'name' required>
                                 {% for person in names %}
                                     {% if person.first_name %}
-                                    <option value="{{ person.first_name }} {{person.last_name}}">{{ person.first_name }} {{ person.last_name }}</option>
+                                    <option value="{{ person}}">{{ person.first_name }} {{ person.last_name }}</option>
                                     {% else %}
                                     <option value="{{ person }}">{{ person }}</option>
                                     {% endif %}
