--- a/catalog/templates/catalog/maintenancerequest_list.html
+++ b/catalog/templates/catalog/maintenancerequest_list.html
@@ -39,7 +39,7 @@
             <td>{{ request.get_office_display }}</td>
             <td>{{ request.date_submitted }}</td>
             <td>{{ request.request_comments|truncatechars:50 }}</td>
-            <td>{{ request.requester }}</td>  
+            <td>{{ request.requester.get_full_name }} </td>
             <td><a href="{{ request.get_absolute_url }}">See more</a></td>   
         </tr>
          
